[package]
name = "local_converter"
version = "0.1.0"
edition = "2024"

[lib]
name = "crypto_converter"
path = "src/lib.rs"

[dependencies]
rust_decimal = { version = "1.42.1", default-features = false, features = ["maths"] }
alloy-primitives = { version = "1.6.0", default-features = false }
anyhow = "1.0.102"
log = "0.4.20"

arkecosystem-crypto = { git = "https://github.com/cryptoishere/rust-crypto.git", optional = true }
arkecosystem-client = { git = "https://github.com/cryptoishere/rust-client.git", optional = true }

[features]
default = ["smartholdem"]
smartholdem = [
    "arkecosystem-crypto",
    # "arkecosystem-client",
]